  - 99_SUNRISE_EL: sunrise/sunset called in "at" computes correctly the next
    event. New "sunrise()/sunset()" calls added, min max optional parameter.

- Sun May 31 2009 (Boris)
  - 81_M232Counter.pm: counter stops at 65536; workaround makes counter wraparound

- Mon Jun 01 2009 (Boris)
  - 59_Weather.pm: new virtual device for weather forecasts, documentation
    updated.

- Tue Jun 09 2009 (Boris)
  - 11_FHT.pm: lazy attribute for FHT devices

- Sun Jun 14 2009 (Rudi)
  - 11_FHT.pm: tmpcorr attribute for FHT devices

- Sat Jun 20 2009 (Boris)
  - 09_USF1000.pm: new module to support USF1000S devices.

- Fri Aug 08 2009 (Boris)
  - 09_USF1000.pm: suppress inplausible readings from USF1000

- Sat Sep 12 2009 (Boris)
  - 00_CM11.pm: feature: get time, fwrev, set reopen for CM11 (Boris 2009-09-12)

- Sun Sep 20 2009 (Boris)
  - Module 09_BS.pm for brightness sensor added (Boris 2009-09-20)

- Sat Oct 03 2009 (Boris)
  - bugfix: missing blank in attribute list for FHT; exclude report from lazy
  - typos and anchors in documentation corrected

- Sun Oct 11 2009 (Boris)
  - finalized 09_BS.pm and documentation

- Tue Nov 10 2009 (Martin Haas)
  - Bugfix: pgm3: Pulldown-Menu without selected FHTDEV not possible any more

- Thu Nov 12 2009 (Rudi)
  - The duplicate pool added. The check routine is called from the Dispatch
    routine (so it will affecc CUL/FHZ and CM11), and for FS20 calls from
    the CUL and FHZ Write function.
    Duplicates within 0.5 seconds are filtered if they are not reported by the
    same IO Unit. Existing check for IODev removed from BS USF1000 FS20 FHT HMS
    KS300 CUL_WS CUL_EM X10.

- Mon Nov 16 2009 (MartinH)
  - pgm3: Google-Weather-Api added. Display of all Logs including the 
  FS20-devices (grep on fhem.log) The status of the batteries of FHT and HMS 
  are shown in the graphics. php4 disabled. Now only php5 is supported. A 
  lot of examples of the UserDefs are added. The pgm3-section of fhem.html was
  changed.